--- a/employees/webapp/i18n/i18n.properties
+++ b/employees/webapp/i18n/i18n.properties
@@ -1,3 +1,12 @@
-title=Title
+title=Employees
 appTitle=App
 appDescription=App Description
+
+#Label 
+labelEmployee=Employee
+labelCountry=Country
+
+#Select
+countryUS=United States
+countryES=Spain
+countryUK=United Kingdom
