--- a/employees/webapp/i18n/i18n.properties
+++ b/employees/webapp/i18n/i18n.properties
@@ -3,10 +3,20 @@ appTitle=App
 appDescription=App Description
 
 #Label 
-labelEmployee=Employee
+labelEmployee=Employee ID
 labelCountry=Country
 
 #Select
 countryUS=United States
 countryES=Spain
 countryUK=United Kingdom
+
+#Table Labels
+tableId=Employee ID
+tableName=Name
+tableCountry=Country
+tableCity=City
+
+#Labels Buttons
+btnFilter=Filter
+btnClearFilter= Clear filter
